apps/whoami/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami-app
  namespace: whoami
spec:
  selector:
    app: whoami-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
