apps/whoami/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whoami
  namespace: whoami
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      kind: Gateway
  hostnames:
    - whoami.lzv2734l60.ftc3iai.shoot.emk.fuga.cloud
  rules:
    - backendRefs:
        - name: whoami-app
          port: 80
